# Multiplayer-snake-game

./: .gitignore  README.md  client.py  config.yaml  config.yaml.example  info.txt  main.py  pyproject.toml  ra.py  requirements.txt  run_server.cmd  run_tui_client.py  server.py
client/: __main__.py  bot.py  client.py  client_base.py  client_cli.py  client_gui.py  requirements-cli-client.txt  requirements-pygame-client.txt  requirements.txt  theme.json
client/tui_client/: run.py
client/web/: client.html  script.js  styles.css  utils.js
server/: config.py  ra.py  requirements.txt  server.py  server_run.py  utils.py
server/mixins/: base_mixin.py  chat_handler_mixin.py  communication_mixin.py  game_mixin.py  handle_connection_mixin.py  main_mixin.py  players_mixin.py  send_game_state_mixin.py  snakes_mixin.py  updates_mixin.py  utils_mixin.py  viewport_mixin.py
server/modules/: base.py  config.py  config_obj.py  dataclasses.py  dto.py  logger.py  utils.py
src/client/: bot.py  client_base.py
src/server/: server_run.py
src/server/mixins/: base_mixin.py  chat_handler_mixin.py  communication_mixin.py  game_mixin.py  main_mixin.py  (+7 more)
src/web/: about.html  web_server.py
tui_client/: main.py  run.py
web/: about.html  fs_test.html  game.html  index.html  ra.py  read_all.py  script.js  utils.js  web_server.py
web/scripts/: communication.js  config.js  game.js  init.js  mobile.js  rendering.js  script.js  utils.js
web/styles/: alerts-like.css  buttons.css  chat.css  game.css  input.css  leaderboard.css  main-menu.css  mobile.css  styles.css  tablist.css
(+14 files in other folders)
