[project]
name = "Slyth"
version = "0.1.0"
description = "Multiplayer snake game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "flask>=3.1.3",
    "loguru==0.7.3",
    "pyyaml==6.0.3",
    "websockets==15.0.1",
]

[project.scripts]
server = "src.server.server_run:main"
web-server = "src.web.web_server:main"
bot = "src.client.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
